--- a/Source/Config/arch/x86_i386/x86_i386_fdt.dts
+++ b/Source/Config/arch/x86_i386/x86_i386_fdt.dts
@@ -93,65 +93,69 @@
         };
 
         /* PIT capabilities (global, synchronized, interrupt):
-         *    * is-main
-         *    * is-aux (or blank)
+         *    * main
+         *    * aux
          *
          * RTC capabilities (global, synchronized, interrupt):
-         *    * is-rtc
-         *    * is-aux (or blank)
+         *    * rtc
+         *    * aux
          *
          * TSC capabilities (per CPU, unsinchronized, no interrupt):
-         *    * is-lifetime
-         *    * is-aux (or blank)
+         *    * lifetime
+         *    * aux
          *
          * HPET capabilities (global, synchronized, interrupt):
-         *    * is-main
-         *    * is-lifetime
-         *    * is-aux (or blank)
+         *    * main
+         *    * lifetime
+         *    * aux
          *
          * LAPIC-Timer capabilities (per CPU, unsynchronized, interrupt):
-         *    * is-main
-         *    * is-aux (or blank)
+         *    * main
+         *    * aux
          *    * Note: the LAPIC timer needs a base timer to calibrate its
          *            frequency. The base timerneeds to support returning the
          *            current time in nanoseconds and must be as precise as
          *            possible.
          *
-         * Set PIT as is-main for compatibility, low precision but synchronized
+         * Set PIT as main for compatibility, low precision but synchronized
          * schedule and system ticks
-         * Set HPET to is-main for global schedule and system ticks
+         * Set HPET to main for global schedule and system ticks
          * synchronization over all CPUS.
-         * Set LAPIC-Timers as is-main for more precise but unsynchronized
+         * Set LAPIC-Timers as main for more precise but unsynchronized
          * schedule and system ticks
          */
         timers {
-            pit {
+            auxtimer0: pit {
                 compatible = "x86,x86-pit";
                 interrupts = <1 0>; /* 0: is IRQ; 1: IRQ line */
                 comm = <0x34 0x40>;
                 qartz-freq = <0x1234DD>;
                 freq = <500>;
                 freq-range = <20 8000>;
-                is-aux;
             };
 
-            rtc {
+            auxtimer1: hpet {
+                compatible = "x86,x86-hpet";
+                interrupts = <1 20>; /* 0: is IRQ; 1: IRQ line */
+                freq = <5000>;
+                acpi-node = <&acpi>;
+            };
+
+            rtctimer: rtc {
                 compatible = "x86,x86-rtc";
                 interrupts = <1 8>; /* 0: is IRQ; 1: IRQ line */
                 comm = <0x70 0x71>;
                 qartz-freq = <32768>;
                 freq = <2>;
                 freq-range = <2 8192>;
-                is-rtc;
             };
 
-            basetime: tsc {
+            lifetimer: tsc {
                 compatible = "x86,x86-tsc";
                 freq = <3600000000>;
-                is-lifetime;
             };
 
-            lapic-timer {
+            maintimer: lapic-timer {
                 compatible = "x86,x86-lapic-timer";
                 interrupts = <0 0x21>; /* 0: is not IRQ; 1: Int line */
                 freq = <500>;
@@ -159,9 +163,8 @@
                 /* The current hardware has a fixed-rate TSC that is the most
                  * precise way to measure time.
                  */
-                base-timer = <&basetime>;
+                base-timer = <&lifetimer>;
                 lapic-node = <&lapic>;
-                is-main;
             };
         };
 
@@ -218,5 +221,12 @@
 
     graphics {
         outputdev = <&stdoutdev>;
+    };
+
+    timeconfig {
+        main = <&maintimer>;
+        rtc = <&rtctimer>;
+        lifetime = <&lifetimer>;
+        aux = <&auxtimer0 &auxtimer1>;
     };
 };
