Added disk management and USTAR FS

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,6 +39,7 @@
         "functional": "c",
         "utility": "c",
         "interruptdeftestc": "c",
-        "interrupts.h": "c"
+        "interrupts.h": "c",
+        "cpu.h": "c"
     }
 }
