--- a/Source/Config/arch/x86_64/x86_64_fdt.dts
+++ b/Source/Config/arch/x86_64/x86_64_fdt.dts
@@ -65,6 +65,20 @@
             reg = <0x0 0xE0000 0x0 0x20000>;
         };
 
+        atapio0 {
+            compatible = "x86,x86-atapio";
+            comm = <0x1F0>;
+            type = <0>;
+            device = "/dev/storage/hd0";
+        };
+
+        atapio1 {
+            compatible = "x86,x86-atapio";
+            comm = <0x1F0>;
+            type = <1>;
+            device = "/dev/storage/hd1";
+        };
+
         lapic: local-apic {
             compatible = "x86,x86-lapic";
             acpi-node = <&acpi>;
@@ -74,7 +88,7 @@
          * interrupts.
          *
          * Only one controller be set as interrupt-controller, the rest should
-         * must be disabled by commenting or removinf the attribute.
+         * must be disabled by commenting or removing the attribute.
          * It is important to keep all node to ensure the hardware is corrtly
          * initialized. The node can be removed if the component is just not
          * present.
